<!--
  ~  Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">FirebaseLoginSample</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="welcome_message">It\'s currently %1$s.</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
    <string name="login_prompt">Login to set customizations!</string>
    <string name="login_btn">Login</string>
    <string name="settings_btn">Settings</string>
    <string name="settings_fact_type_title">Fun Fact Type</string>

    <string name="fact_type_android">Android</string>
    <string name="fact_type_california">California</string>

    <!--Shared Preference Keys -->
    <string name="preference_fact_type_key">fact_type_pref</string>
    <string name="check_in">CHECK-IN</string>

    <string name="output_hint">Please place your finger on the device\'s camera, covering the flash as well.</string>
    <string name="separator">,</string>
    <string name="row_separator">\n</string>
    <string name="raw_values">Measurements (Timestamp, Value)</string>
    <plurals name="measurement_output_template">
        <item quantity="zero">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="one">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="other">Pulse: %2.1f (%d cycles in %2.1f seconds)</item>
    </plurals>


    <string name="title_activity_hunt">Treasure Hunt</string>

    <!--    Permissions Strings-->
    <string
        name="permission_rationale">Location permission needed for core functionality of the game.
    </string>

    <string name="permission_denied_explanation">
        You need to grant location permission in order to play this game.
    </string>
    <string name="settings">Settings</string>
    <string
        name="location_setting_off">Please turn on device location in Settings and try again.
    </string>

    <!--    Geofence Status Strings-->
    <string name="geofences_added">Clue Geofence added.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_entered">Geofence entered.</string>
    <string name="geofence_over">You have found the treasure! Congratulations!</string>

    <!-- Geofence Hints -->
    <string name="not_started_hint"></string>
    <string name="golden_gate_bridge_hint">Go to a bridge with a name that does not match the color that it is!</string>
    <string name="ferry_building_hint">Go to a market with an amazing assortment of delicious foods. It is a San Francisco classic!</string>
    <string name="pier_39_hint">Go to a pier popular for tourist attractions, carnival games, fresh fish, and delicious sourdough bread!</string>
    <string name="union_square_hint">Go to a square named after Civil War rallies held there, but now known for its amazing shopping!</string>

    <!-- Geofence Locations -->
    <string name="golden_gate_bridge_location">at the Golden Gate bridge</string>
    <string name="ferry_building_location">in the Ferry Building</string>
    <string name="pier_39_location">at Pier 39</string>
    <string name="union_square_location">in Union Square</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="location_required_error">Location services must be enabled for this game.</string>

    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofence_error">There was an error in finding your treasure</string>

    <!-- Notification Strings-->
    <string name="channel_name">GeofenceStatus</string>
    <string name="content_text">You found a clue <xliff:g id="geofence_location">%1$s</xliff:g>.</string>
    <string name="notification_channel_description">Geofence status notification</string>

    <!-- Content Description Strings -->
    <string name="android_map_description">An Android robot with a map</string>
    <string name="rewards">REWARDS</string>
    <string name="currentPoint">Available Points</string>
    <string name="navigationhome">Home</string>
    <string name="navigationpoints">Points</string>
    <string name="navigationchallenges">Challenges</string>




    <string name="sleep_tracker_fragment">SleepTrackerFragment</string>
    <string name="sleep_quality_fragment">SleepQualityFragment</string>

    <!-- Button labels -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>

    <!-- contentDescription strings for quality icons -->
    <string name="quality_0">Sleep Quality 0</string>
    <string name="quality_1">Sleep Quality 1</string>
    <string name="quality_2">Sleep Quality 2</string>
    <string name="quality_3">Sleep Quality 3</string>
    <string name="quality_4">Sleep Quality 4</string>
    <string name="quality_5">Sleep Quality 5</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>

    <!-- Sleep quality strings -->
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>

    <!-- Toast to play after Clear button has been pressed -->
    <string name="cleared_message">All your data is gone forever.</string>

    <string name="header_text">Sleep Results</string>
    <string name="close">Close</string>
    <string name="minutes_length">%d minutes on %s</string>
    <string name="hours_length">%d hours on %s</string>
    <string name="seconds_length">%d seconds on %s</string>
    <string name="claim">Claim</string>
    <string name="claimDisabled">Can\'t afford</string>
    <string name="submit">Submit</string>
    <string name="submit_disabled">Fulfill criteria</string>
</resources>
