<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/points_background">

        <TextView
            android:id="@+id/userPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/rewardButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/rewardButton"
            android:layout_width="411dp"
            android:layout_height="55dp"
            android:background="@drawable/button_gradient"
            android:text="@string/rewards"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentPoint"
            android:textColor="@color/blueText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/userPoints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/navigationHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="40dp"
            android:text="@string/navigationhome"
            android:textColor="@color/blueText"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/navigationChallenges"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/navigationChallenges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/navigationchallenges"
            android:textColor="@color/blueText"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/navigationPoints"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/navigationHome"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/navigationPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="90dp"
            android:text="@string/navigationpoints"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/navigationChallenges"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>